k8s/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: development
  labels:
    app.kubernetes.io/name: ui
    app.kubernetes.io/component: service
    app.kubernetes.io/owner: retail-store-sample
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: ui
